erl.Oracle.TnsNames/ANTLR/Generated/TnsNamesParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.4-SNAPSHOT
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from TnsNamesParser.g4 by ANTLR 4.5.4-SNAPSHOT

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace erl.Oracle.TnsNames.ANTLR {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.4-SNAPSHOT")]
[System.CLSCompliant(false)]
public partial class TnsNamesParser : Parser {
	public const int
		WORD=1, LEFT_PAREN=2, RIGHT_PAREN=3, EQUALS=4, COMMA=5, SINGLE_QUOTE=6, 
		DOUBLE_QUOTE=7, COMMENT=8, WHITESPACE=9, NEWLINE=10;
	public const int
		RULE_configuration_file = 0, RULE_parameter = 1, RULE_parameterValue = 2, 
		RULE_keyword = 3, RULE_value = 4;
	public static readonly string[] ruleNames = {
		"configuration_file", "parameter", "parameterValue", "keyword", "value"
	};

	private static readonly string[] _LiteralNames = {
		null, null, "'('", "')'", "'='", "','"
	};
	private static readonly string[] _SymbolicNames = {
		null, "WORD", "LEFT_PAREN", "RIGHT_PAREN", "EQUALS", "COMMA", "SINGLE_QUOTE", 
		"DOUBLE_QUOTE", "COMMENT", "WHITESPACE", "NEWLINE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "TnsNamesParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public TnsNamesParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class Configuration_fileContext : ParserRuleContext {
		public ParameterContext[] parameter() {
			return GetRuleContexts<ParameterContext>();
		}
		public ParameterContext parameter(int i) {
			return GetRuleContext<ParameterContext>(i);
		}
		public Configuration_fileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_configuration_file; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITnsNamesParserListener typedListener = listener as ITnsNamesParserListener;
			if (typedListener != null) typedListener.EnterConfiguration_file(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITnsNamesParserListener typedListener = listener as ITnsNamesParserListener;
			if (typedListener != null) typedListener.ExitConfiguration_file(this);
		}
	}

	[RuleVersion(0)]
	public Configuration_fileContext configuration_file() {
		Configuration_fileContext _localctx = new Configuration_fileContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_configuration_file);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 13;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==WORD) {
				{
				{
				State = 10; parameter();
				}
				}
				State = 15;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParameterContext : ParserRuleContext {
		public KeywordContext keyword() {
			return GetRuleContext<KeywordContext>(0);
		}
		public ITerminalNode EQUALS() { return GetToken(TnsNamesParser.EQUALS, 0); }
		public ParameterValueContext parameterValue() {
			return GetRuleContext<ParameterValueContext>(0);
		}
		public ParameterContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parameter; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITnsNamesParserListener typedListener = listener as ITnsNamesParserListener;
			if (typedListener != null) typedListener.EnterParameter(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITnsNamesParserListener typedListener = listener as ITnsNamesParserListener;
			if (typedListener != null) typedListener.ExitParameter(this);
		}
	}

	[RuleVersion(0)]
	public ParameterContext parameter() {
		ParameterContext _localctx = new ParameterContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_parameter);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 16; keyword();
			State = 17; Match(EQUALS);
			State = 18; parameterValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParameterValueContext : ParserRuleContext {
		public ParameterValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parameterValue; } }
	 
		public ParameterValueContext() { }
		public virtual void CopyFrom(ParameterValueContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ParameterListParameterValueContext : ParameterValueContext {
		public ParameterContext _parameter;
		public IList<ParameterContext> _parameterList = new List<ParameterContext>();
		public ITerminalNode[] LEFT_PAREN() { return GetTokens(TnsNamesParser.LEFT_PAREN); }
		public ITerminalNode LEFT_PAREN(int i) {
			return GetToken(TnsNamesParser.LEFT_PAREN, i);
		}
		public ITerminalNode[] RIGHT_PAREN() { return GetTokens(TnsNamesParser.RIGHT_PAREN); }
		public ITerminalNode RIGHT_PAREN(int i) {
			return GetToken(TnsNamesParser.RIGHT_PAREN, i);
		}
		public ParameterContext[] parameter() {
			return GetRuleContexts<ParameterContext>();
		}
		public ParameterContext parameter(int i) {
			return GetRuleContext<ParameterContext>(i);
		}
		public ParameterListParameterValueContext(ParameterValueContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITnsNamesParserListener typedListener = listener as ITnsNamesParserListener;
			if (typedListener != null) typedListener.EnterParameterListParameterValue(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITnsNamesParserListener typedListener = listener as ITnsNamesParserListener;
			if (typedListener != null) typedListener.ExitParameterListParameterValue(this);
		}
	}
	public partial class ScalarParameterValueContext : ParameterValueContext {
		public ValueContext scalar;
		public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		public ScalarParameterValueContext(ParameterValueContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITnsNamesParserListener typedListener = listener as ITnsNamesParserListener;
			if (typedListener != null) typedListener.EnterScalarParameterValue(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITnsNamesParserListener typedListener = listener as ITnsNamesParserListener;
			if (typedListener != null) typedListener.ExitScalarParameterValue(this);
		}
	}
	public partial class ValueListParameterValueContext : ParameterValueContext {
		public ValueContext _value;
		public IList<ValueContext> _valueList = new List<ValueContext>();
		public ITerminalNode LEFT_PAREN() { return GetToken(TnsNamesParser.LEFT_PAREN, 0); }
		public ITerminalNode RIGHT_PAREN() { return GetToken(TnsNamesParser.RIGHT_PAREN, 0); }
		public ValueContext[] value() {
			return GetRuleContexts<ValueContext>();
		}
		public ValueContext value(int i) {
			return GetRuleContext<ValueContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(TnsNamesParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(TnsNamesParser.COMMA, i);
		}
		public ValueListParameterValueContext(ParameterValueContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITnsNamesParserListener typedListener = listener as ITnsNamesParserListener;
			if (typedListener != null) typedListener.EnterValueListParameterValue(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITnsNamesParserListener typedListener = listener as ITnsNamesParserListener;
			if (typedListener != null) typedListener.ExitValueListParameterValue(this);
		}
	}

	[RuleVersion(0)]
	public ParameterValueContext parameterValue() {
		ParameterValueContext _localctx = new ParameterValueContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_parameterValue);
		int _la;
		try {
			State = 40;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new ScalarParameterValueContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 20; ((ScalarParameterValueContext)_localctx).scalar = value();
				}
				break;

			case 2:
				_localctx = new ValueListParameterValueContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 21; Match(LEFT_PAREN);
				State = 22; ((ValueListParameterValueContext)_localctx)._value = value();
				((ValueListParameterValueContext)_localctx)._valueList.Add(((ValueListParameterValueContext)_localctx)._value);
				State = 27;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==COMMA) {
					{
					{
					State = 23; Match(COMMA);
					State = 24; ((ValueListParameterValueContext)_localctx)._value = value();
					((ValueListParameterValueContext)_localctx)._valueList.Add(((ValueListParameterValueContext)_localctx)._value);
					}
					}
					State = 29;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 30; Match(RIGHT_PAREN);
				}
				break;

			case 3:
				_localctx = new ParameterListParameterValueContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 36;
				_errHandler.Sync(this);
				_la = _input.La(1);
				do {
					{
					{
					State = 32; Match(LEFT_PAREN);
					State = 33; ((ParameterListParameterValueContext)_localctx)._parameter = parameter();
					((ParameterListParameterValueContext)_localctx)._parameterList.Add(((ParameterListParameterValueContext)_localctx)._parameter);
					State = 34; Match(RIGHT_PAREN);
					}
					}
					State = 38;
					_errHandler.Sync(this);
					_la = _input.La(1);
				} while ( _la==LEFT_PAREN );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class KeywordContext : ParserRuleContext {
		public ITerminalNode WORD() { return GetToken(TnsNamesParser.WORD, 0); }
		public KeywordContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_keyword; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITnsNamesParserListener typedListener = listener as ITnsNamesParserListener;
			if (typedListener != null) typedListener.EnterKeyword(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITnsNamesParserListener typedListener = listener as ITnsNamesParserListener;
			if (typedListener != null) typedListener.ExitKeyword(this);
		}
	}

	[RuleVersion(0)]
	public KeywordContext keyword() {
		KeywordContext _localctx = new KeywordContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_keyword);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 42; Match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ValueContext : ParserRuleContext {
		public IToken content;
		public ITerminalNode WORD() { return GetToken(TnsNamesParser.WORD, 0); }
		public ITerminalNode[] SINGLE_QUOTE() { return GetTokens(TnsNamesParser.SINGLE_QUOTE); }
		public ITerminalNode SINGLE_QUOTE(int i) {
			return GetToken(TnsNamesParser.SINGLE_QUOTE, i);
		}
		public ITerminalNode[] DOUBLE_QUOTE() { return GetTokens(TnsNamesParser.DOUBLE_QUOTE); }
		public ITerminalNode DOUBLE_QUOTE(int i) {
			return GetToken(TnsNamesParser.DOUBLE_QUOTE, i);
		}
		public ValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_value; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITnsNamesParserListener typedListener = listener as ITnsNamesParserListener;
			if (typedListener != null) typedListener.EnterValue(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITnsNamesParserListener typedListener = listener as ITnsNamesParserListener;
			if (typedListener != null) typedListener.ExitValue(this);
		}
	}

	[RuleVersion(0)]
	public ValueContext value() {
		ValueContext _localctx = new ValueContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_value);
		try {
			State = 51;
			switch (_input.La(1)) {
			case WORD:
				EnterOuterAlt(_localctx, 1);
				{
				State = 44; _localctx.content = Match(WORD);
				}
				break;
			case SINGLE_QUOTE:
				EnterOuterAlt(_localctx, 2);
				{
				State = 45; Match(SINGLE_QUOTE);
				State = 46; _localctx.content = Match(WORD);
				State = 47; Match(SINGLE_QUOTE);
				}
				break;
			case DOUBLE_QUOTE:
				EnterOuterAlt(_localctx, 3);
				{
				State = 48; Match(DOUBLE_QUOTE);
				State = 49; _localctx.content = Match(WORD);
				State = 50; Match(DOUBLE_QUOTE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN.ToCharArray());
}
} // namespace erl.Oracle.TnsNames.ANTLR
